Mongoose funcionando
Porém: nome: ValidatorError: Path `nome` is required. Mesmo que o nome tenha sido preenchido no frontend
